--- a/css/styles.css
+++ b/css/styles.css
@@ -128,15 +128,15 @@ img {
 }
 
 .nav-link {
+  display: block;
+  padding-top: 24px;
+  padding-bottom: 24px;
+
   font-weight: 500;
   line-height: 1.5;
   letter-spacing: 0.32px;
 
   color: var(--dark-color-main);
-
-  display: block;
-  padding-top: 24px;
-  padding-bottom: 24px;
 
   transition: color var(--duration) var(--timing-function);
 }
@@ -171,14 +171,14 @@ img {
 }
 
 .contacts-link {
+  display: block;
+  padding-top: 24px;
+  padding-bottom: 24px;
+
   line-height: 1.5;
   letter-spacing: 0.32px;
 
   color: var(--text-color-main);
-
-  display: block;
-  padding-top: 24px;
-  padding-bottom: 24px;
 
   transition: color var(--duration) var(--timing-function);
 }
@@ -190,6 +190,12 @@ img {
 }
 
 .hero {
+  padding-top: 188px;
+  padding-bottom: 188px;
+  max-width: 1440px;
+  margin-left: auto;
+  margin-right: auto;
+
   background-color: var(--dark-color-main);
   background-image: linear-gradient(
       rgba(46, 47, 66, 0.7),
@@ -199,30 +205,30 @@ img {
   background-repeat: no-repeat;
   background-position: center;
   background-size: cover;
-
-  padding-top: 188px;
-  padding-bottom: 188px;
-  max-width: 1440px;
-  margin-left: auto;
-  margin-right: auto;
 }
 
 .hero-display {
+  max-width: 496px;
+  margin-left: auto;
+  margin-right: auto;
+  margin-bottom: 48px;
+
+  text-align: center;
   font-size: 56px;
   font-weight: 700;
   line-height: 1.07;
   letter-spacing: 1.12px;
 
   color: var(--white-color);
-
-  max-width: 496px;
-  margin-left: auto;
-  margin-right: auto;
-  margin-bottom: 48px;
-  text-align: center;
 }
 
 .hero-button {
+  display: block;
+  padding: 16px 32px;
+  margin-left: auto;
+  margin-right: auto;
+  min-width: 169px;
+
   font-family: inherit;
   font-weight: 500;
   font-size: 16px;
@@ -235,12 +241,6 @@ img {
   cursor: pointer;
   border: none;
   border-radius: 4px;
-
-  display: block;
-  padding: 16px 32px;
-  margin-left: auto;
-  margin-right: auto;
-  min-width: 169px;
 
   transition: background-color var(--duration) var(--timing-function);
 }
@@ -256,16 +256,15 @@ img {
 }
 
 .main-title {
-  text-align: center;
+  margin-bottom: 72px;
 
+  text-align: center;
   font-size: 36px;
   line-height: 1.11;
   letter-spacing: 0.72px;
   text-transform: capitalize;
 
   color: var(--dark-color-main);
-
-  margin-bottom: 72px;
 }
 
 .features-list {
@@ -283,19 +282,21 @@ img {
   justify-content: center;
   height: 112px;
   margin-bottom: 8px;
+
   border-radius: 4px;
+
   background-color: var(--light-color-main);
 }
 
 .features-title {
+  margin-bottom: 8px;
+
   font-size: 20px;
   font-weight: 500;
   line-height: 1.2;
   letter-spacing: 0.4px;
 
   color: var(--dark-color-main);
-
-  margin-bottom: 8px;
 }
 
 .features-text {
@@ -317,9 +318,9 @@ img {
 }
 
 .team {
-  background-color: var(--light-color-main);
-
   padding: 120px 0;
+
+  background-color: var(--light-color-main);
 }
 
 .team-list {
@@ -328,9 +329,9 @@ img {
 }
 
 .team-item {
-  background-color: var(--white-color);
-
   flex-basis: calc((100% - 24px * 3) / 4);
+
+  background-color: var(--white-color);
 
   border-radius: 0px 0px 4px 4px;
   box-shadow: 0px 2px 1px 0px rgba(46, 47, 66, 0.08),
@@ -343,22 +344,21 @@ img {
 }
 
 .team-name {
-  text-align: center;
+  margin-bottom: 8px;
 
+  text-align: center;
   font-size: 20px;
   font-weight: 500;
   line-height: 1.2;
   letter-spacing: 0.4px;
 
   color: var(--dark-color-main);
-
-  margin-bottom: 8px;
 }
 
 .team-position {
-  text-align: center;
   margin-bottom: 8px;
 
+  text-align: center;
   line-height: 1.5;
   letter-spacing: 0.32px;
 }
@@ -441,9 +441,9 @@ img {
 }
 
 .footer {
-  background-color: var(--dark-color-main);
-
   padding: 100px 0;
+
+  background-color: var(--dark-color-main);
 }
 
 .footer-container {
@@ -460,12 +460,12 @@ img {
 }
 
 .footer-text {
+  max-width: 264px;
+
   line-height: 1.5;
   letter-spacing: 0.32px;
 
   color: var(--light-color-main);
-
-  max-width: 264px;
 }
 
 .footer-title {
@@ -477,6 +477,11 @@ img {
 
   color: var(--white-color);
 }
+
+.footer-social {
+  margin-right: 80px;
+}
+
 .footer-social .social-list {
   gap: 16px;
 }
@@ -487,12 +492,68 @@ img {
   background-color: var(--success-color);
 }
 
+.subscribe-form {
+  display: flex;
+  gap: 24px;
+}
+
+.subscribe-form-input {
+  width: 264px;
+  height: 40px;
+  padding: 8px 16px;
+
+  font-size: 12px;
+  line-height: 2;
+  letter-spacing: 0.04em;
+
+  border-radius: 4px;
+  border: 1px solid var(--white-color);
+  box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.15);
+
+  background-color: transparent;
+  color: var(--white-color);
+}
+
+.subscribe-form-input::placeholder {
+  font-size: 12px;
+  line-height: 2;
+  letter-spacing: 0.04em;
+
+  color: var(--white-color);
+}
+
+.subscribe-form-button {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  padding: 8px 24px;
+  gap: 16px;
+
+  font-family: inherit;
+  font-weight: 500;
+  line-height: 1.5;
+  letter-spacing: 0.04em;
+
+  border: none;
+  border-radius: 4px;
+
+  background-color: var(--brand-color);
+  color: var(--white-color);
+
+  cursor: pointer;
+}
+
+.subscribe-form-icon {
+  fill: currentColor;
+}
+
 .backdrop {
   position: fixed;
   top: 0;
   left: 0;
   width: 100%;
   height: 100%;
+
   background-color: var(--backdrop-color);
   opacity: 1;
   visibility: visible;
@@ -516,11 +577,15 @@ img {
   top: 50%;
   left: 50%;
   width: 408px;
+  padding: 72px 24px 24px 24px;
   min-height: 584px;
+
   border-radius: 4px;
-  background-color: var(--light-background-color);
   box-shadow: 0px 2px 1px 0px rgba(0, 0, 0, 0.2),
     0px 1px 3px 0px rgba(0, 0, 0, 0.12), 0px 1px 1px 0px rgba(0, 0, 0, 0.14);
+
+  background-color: var(--light-background-color);
+
   transform: translate(-50%, -50%) scale(1);
   transition: transform var(--duration) var(--timing-function);
 }
@@ -538,10 +603,10 @@ img {
 
   border-radius: 50%;
   border: 1px solid rgba(0, 0, 0, 0.1);
-  cursor: pointer;
 
   background-color: var(--accent-color);
 
+  cursor: pointer;
   transition: background-color var(--duration) var(--timing-function),
     border var(--duration) var(--timing-function);
 }
@@ -550,11 +615,13 @@ img {
 .close-button:focus,
 .close-button:active {
   background-color: var(--pressed-color);
+
   border: none;
 }
 
 .close-button-icon {
   fill: var(--dark-color-main);
+
   transition: fill var(--duration) var(--timing-function);
 }
 
@@ -562,6 +629,181 @@ img {
 .close-button:focus .close-button-icon,
 .close-button:active .close-button-icon {
   fill: var(--white-color);
+}
+
+.modal-text {
+  margin-bottom: 16px;
+
+  text-align: center;
+  font-weight: 500;
+  line-height: 1.5;
+  letter-spacing: 0.02em;
+
+  color: var(--dark-color-main);
+}
+
+.contact-form-field {
+  margin-bottom: 8px;
+}
+
+.contact-form-label {
+  display: block;
+  margin-bottom: 4px;
+
+  font-size: 12px;
+  line-height: 1.167;
+  letter-spacing: 0.02em;
+
+  color: var(--text-color-secondary);
+}
+
+.input-wrapper {
+  position: relative;
+}
+
+.contact-form-input {
+  width: 100%;
+  height: 40px;
+  padding: 11px 38px;
+
+  font-size: 12px;
+  line-height: 1.167;
+  letter-spacing: 0.04em;
+
+  border-radius: 4px;
+  border: 1px solid var(--backdrop-color);
+
+  color: var(--text-color-secondary);
+  background-color: transparent;
+  outline: transparent;
+
+  transition: border-color var(--duration) var(--timing-function);
+}
+
+.contact-form-input:focus + .contact-form-icon {
+  fill: var(--brand-color);
+}
+
+.contact-form-input:focus {
+  outline: none;
+  border-color: var(--brand-color);
+}
+
+.contact-form-icon {
+  position: absolute;
+  top: 50%;
+  left: 16px;
+  transform: translateY(-50%);
+
+  fill: var(--dark-color-main);
+
+  transition: fill var(--duration) var(--timing-function);
+}
+
+.textarea-wrapper {
+  margin-bottom: 16px;
+}
+
+.contact-form-textarea {
+  display: block;
+  width: 100%;
+  height: 120px;
+  padding: 8px 16px;
+  resize: none;
+
+  border: 1px solid var(--backdrop-color);
+  border-radius: 4px;
+  outline: transparent;
+
+  font-size: 12px;
+  line-height: 1.17;
+  letter-spacing: 0.04em;
+
+  color: var(--text-color-secondary);
+  background-color: transparent;
+
+  transition: border-color var(--duration) var(--timing-function);
+
+  /* overflow: hidden; */
+}
+
+.contact-form-textarea:focus {
+  outline: none;
+  border-color: var(--brand-color);
+}
+
+.checkbox-wrapper {
+  margin-bottom: 24px;
+}
+
+.checkbox-label {
+  display: block;
+  user-select: none;
+
+  font-size: 12px;
+  line-height: 1.167;
+  letter-spacing: 0.02em;
+
+  color: var(--text-color-secondary);
+}
+
+.custom-checkbox {
+  display: inline-flex;
+  align-items: center;
+  justify-content: center;
+  width: 16px;
+  height: 16px;
+  margin-right: 8px;
+
+  border-radius: 2px;
+  border: 1px solid var(--backdrop-color);
+
+  fill: transparent;
+
+  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1),
+    border 250ms cubic-bezier(0.4, 0, 0.2, 1),
+    fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.checkbox-input:checked + .checkbox-label .custom-checkbox {
+  fill: var(--white-color);
+  background-color: var(--brand-color);
+
+  border: none;
+}
+
+.privacy-policy {
+  color: var(--brand-color);
+}
+
+.contact-form-button {
+  display: block;
+  padding: 16px 32px;
+  min-width: 169px;
+  margin-left: auto;
+  margin-right: auto;
+
+  box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
+  border-radius: 4px;
+  border: none;
+
+  font-family: inherit;
+  font-weight: 500;
+  font-size: 16px;
+  line-height: 24px;
+  letter-spacing: 0.04em;
+
+  background-color: var(--brand-color);
+  color: #ffffff;
+
+  cursor: pointer;
+  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.contact-form-button:hover,
+.contact-form-button:focus,
+.contact-form-button:active {
+  background-color: var(--pressed-color);
 }
 
 /* ===============================PORTFOLIO PAGE=============================== */
